--- a/info.html
+++ b/info.html
@@ -108,8 +108,8 @@
 			<td>
 				<ul>
 					<h3>3행 4열</h3>
-					<li>성명: </li>
-					<li>소속: </li>
+					<li>성명: 김진현</li>
+					<li>소속: 공간인소프트</li>
 				</ul>
 			</td>
 		</tr>
